k8s/chat-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-db-replica
  namespace: groupsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-db-replica
  template:
    metadata:
      labels:
        app: chat-db-replica
    spec:
      
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: "Always"

      containers:
        - name: chat-db-replica
          image: postgres:16-alpine
          
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          # Usamos una variable PGDATA que apunte a un subdirectorio 
          # para evitar conflictos de permisos con la raíz del montaje del PVC.
          command:
            - sh
            - -c
            - |
              [...]
          volumeMounts:
            - name: chat-db-replica-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: chat-db-replica-data
          persistentVolumeClaim:
            claimName: chat-db-replica-pvc
