k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: groupsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          # 1. Tu imagen de ECR (849194575776 es tu ID de cuenta)
          image: 849194575776.dkr.ecr.us-east-1.amazonaws.com/auth-service:v2026.04.24-1
          # 2. Obligatorio Always para descargar de ECR
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 20
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: groupsapp
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 80         # Cambiado a 8 para que sea la URL estándar
      targetPort: 8001 # Tu puerto interno de Flask
  # 3. LoadBalancer crea el link público de Amazon (ELB)
  type: LoadBalancer
