k8s/chat-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  namespace: groupsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: 849194575776.dkr.ecr.us-east-1.amazonaws.com/groupsapp/chat-service:v2026.04.24-1
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 20
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: groupsapp
spec:
  selector:
    app: chat-service
  ports:
    - name: http
      port: 80         
      targetPort: 8002 
  type: LoadBalancer
