k8s/file-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
  namespace: groupsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
        - name: file-service
          image: 849194575776.dkr.ecr.us-east-1.amazonaws.com/file-service:v2026.04.24-1
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
          volumeMounts:
            - name: file-storage
              mountPath: /app/uploads
          # ----------------------------------------
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 20
            periodSeconds: 15
      # --- Y ESTO PARA CONECTAR EL DISCO ---
      volumes:
        - name: file-storage
          persistentVolumeClaim:
            claimName: file-uploads-pvc
      # -------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  name: file-service
  namespace: groupsapp
spec:
  selector:
    app: file-service
  ports:
    - name: http
      port: 80
      targetPort: 8003
  type: LoadBalancer
