k8s/web-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  namespace: groupsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-frontend
  template:
    metadata:
      labels:
        app: web-frontend
    spec:
      containers:
        - name: web-frontend
          image: 849194575776.dkr.ecr.us-east-1.amazonaws.com/groupsapp/web-frontend:v2026.04.24-1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  namespace: groupsapp
spec:
  selector:
    app: web-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
